I add checkbox from the example

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,1 +1,13 @@
-THIS IS ABOUT PAGE
+Profile
+
+<form name = "myForm" ng-controller = "checkboxCtrl">
+    <label>Value1:
+        <input type = "checkbox" ng-model = "checkboxModel.value1">
+    </label><br/>
+    <label>Value2:
+        <input type = "checkbox" ng-model="checkboxModel.value2"
+                ng-true-value = "'YES'" ng-false-value = "'NO'">
+    </label><br/>
+    <tt>value1 = {{checkboxModel.value1}}</tt><br/>
+    <tt>value2 = {{checkboxModel.value2}}</tt><br/>
+</form>
