Almost working - checkbox = true

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -2,7 +2,7 @@ Profile
 
 <form name = "myForm" ng-controller = "checkboxCtrl">
     <label>Public:
-        <input type = "checkbox" ng-model = "checkboxModel.public">
+        <input type = "checkbox" ng-model = "public">
     </label><br/>
-    <tt>public = {{checkboxModel.public}}</tt><br/>
+    <tt>public = {{public}}</tt><br/>
 </form>
