Maybe Angular reads data from the database with the help of the server correctly

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -4,5 +4,5 @@ Profile
     <label>Public:
         <input type = "checkbox" ng-model = "public">
     </label><br/>
-    <tt>public = {{public.public}}</tt><br/>
+    <tt>public = {{public}}</tt><br/>
 </form>
