I use {{images.length}} on the pages index.html and profile.html and it doesn't want to work at profile.html

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -12,6 +12,8 @@
     on-close="closed();"
 ></ng-image-gallery>
 
+<h2>{{images.length}} картинки</h2>
+
 <div style="margin-top: 20px" class="container">
     <div ngf-drop ngf-select ng-model="file" class="drop-box" 
         ngf-drag-over-class="'dragover'" ngf-allow-dir="true"
