I deleted slider from the profile.html

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -6,20 +6,7 @@
     </label><br/>
     <tt>public = {{public}}</tt><br/>
 </form>
-<h2>{{images.length}} картинки</h2>
-
-<ng-image-gallery
-    ng-if="images.length > 0"
-    images="images"
-    thumbnails="true"
-    inline="true"
-    img-bubbles="true"
-    bg-close="true"
-    bubbles="true"
-    img-anim="slide"
-    conf="conf"
-    on-open="opened();"
-    on-close="closed();"
-></ng-image-gallery>
+<h3>{{images}} картинки</h3>
+<h2>{{images}} картинки</h2>
 
 </div>
