Images displays with manual url like img ng-src = {{images[0].url}} img ng-src = {{images[1].url}}

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -6,7 +6,11 @@
     </label><br/>
     <tt>public = {{public}}</tt><br/>
 </form>
-<h3>{{images}} картинки</h3>
-<h2>{{images}} картинки</h2>
+<h3>{{images.length}} картинки</h3>
+<img ng-src = {{images[0].url}}>
+<img ng-src = {{images[1].url}}>
+<img ng-src = {{images[2].url}}>
+<img ng-src = {{images[3].url}}>
+
 
 </div>
