--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -9,10 +9,13 @@
     <div class = container>
         <div class = jumbotron>
             <h3>{{images.length}} картинки</h3>
-            <p ng-repeat = "image in images">
+            <div ng-repeat = "image in images">
                 <img ng-src = {{image.url}}>
-            </p>
+            </div>
         </div>
     </div>
 
 </div>
+
+<!-- This code will be for the Bootstrap gallery with the modal windows 
+
