I added code from the example into my application. Not work, may be I didn't registered the module

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -50,20 +50,11 @@
 
 <experiment with the ligtbox-->
 
-    <div tabindex="-1" class="modal fade" id="myModal" role="dialog">
-  <div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-		<button class="close" type="button" data-dismiss="modal">×</button>
-		<h3 class="modal-title">Heading</h3>
-	</div>
-	<div class="modal-body">
-		
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-default" data-dismiss="modal">Close</button>
-	</div>
-   </div>
-  </div>
-</div>
+<ul class="gallery gallery1" ng-controller="GalleryCtrl">
+  <li ng-repeat="image in images">
+    <a ng-click="openLightboxModal($index)">
+      <img ng-src="{{image.thumbUrl}}" class="img-thumbnail">
+    </a>
+  </li>
+</ul>
 
