--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -50,11 +50,19 @@
 
 <experiment with the ligtbox-->
 
-<ul class="gallery gallery1" ng-controller="GalleryCtrl">
+<!--<ul class="gallery gallery1" ng-controller="GalleryCtrl">-->
+  <!--<li ng-repeat="image in images">
+    <a ng-click="openLightboxModal($index)">
+      <img ng-src="{{image.thumbUrl}}" class="img-thumbnail">
+    </a>
+  </li>-->
+<!--</ul>-->
+
+<!--<ul class="gallery gallery1" ng-controller="GalleryCtrl">
   <li ng-repeat="image in images">
     <a ng-click="openLightboxModal($index)">
       <img ng-src="{{image.thumbUrl}}" class="img-thumbnail">
     </a>
   </li>
-</ul>
+</ul>-->
 
