--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -20,3 +20,11 @@
         accept="image/*" 
         ngf-pattern="'image/*'">Drop images here or click to upload</div>
 </div>
+
+<ul class="gallery gallery1" ng-controller="GalleryCtrl">
+  <!--<li ng-repeat="image in images">
+    <a ng-click="openLightboxModal($index)">
+      <img ng-src="{{image.thumbUrl}}" class="img-thumbnail">
+    </a>
+  </li>-->
+</ul>
